# named-routes-compile-time

./: .gitignore  README.md  flake.nix  named-routes-compile-time.cabal
src/Anonymous/: Main.hs
src/Named/: Main.hs
