cabal-version: 1.12

name:           named-routes-compile-time
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/book-store#readme>
homepage:       https://github.com/githubuser/book-store#readme
bug-reports:    https://github.com/githubuser/book-store/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2023 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/book-store

executable anonymous-routes-exe
  main-is: Main.hs
  hs-source-dirs:
      src/Anonymous
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N -freduction-depth=0
  build-depends:
      aeson
    , base >=4.7 && <5
    , http-client
    , http-types
    , markdown-unlit
    , servant
    , servant-client
    , servant-server
    , transformers
    , wai
    , warp
  default-language: Haskell2010


executable named-routes-exe
  main-is: Main.hs
  hs-source-dirs:
      src/Named
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , http-client
    , http-types
    , markdown-unlit
    , servant
    , servant-client
    , servant-server
    , transformers
    , wai
    , warp
  default-language: Haskell2010
